--- a/app/assets/stylesheets/shared/tabs/_nav_item.scss
+++ b/app/assets/stylesheets/shared/tabs/_nav_item.scss
@@ -13,7 +13,7 @@
       border-bottom: 1px solid transparent;
       display: block;
       font-weight: var(--font-weight-bold);
-      transform: translateY(2px);
+      padding-top: 2px;
       white-space: nowrap;
     }
     
