--- a/app/assets/stylesheets/shared/tabs/_tabs.scss
+++ b/app/assets/stylesheets/shared/tabs/_tabs.scss
@@ -5,7 +5,7 @@
   margin: 0 0 2.5rem;
   overflow-x: auto;
   overflow-y: hidden;
-  padding: 0;
+  padding: 0 0 .25rem 0;
   scrollbar-width: thin;
   -webkit-overflow-scrolling: touch;
 }
